feat: Added classifier
A simple classifier which extracts only alpha numeric words to
classify a string of words is built, this could be a good start
to get the ground truth.

--- a/words.ipynb
+++ b/words.ipynb
@@ -14,37 +14,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def getwords(doc):\n",
+    "    '''\n",
+    "        Returns words in form of dictionary\n",
+    "    '''\n",
     "    splitter = re.compile('\\\\W*')\n",
     "    #split words by non alpha characters\n",
     "    words = [s.lower() for s in splitter.split(doc) if len(s)>2 and len(s)<20 ]\n",
     "    \n",
     "    # return unique set of words only\n",
-    "    return dict([(2,1) for w in words])"
+    "    return dict([(w,1) for w in words])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{2: 1}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "a = getwords(\"hello world 12 shoildn't be teere\")\n",
-    "print a"
+    "class classifier:\n",
+    "    def __init__(self,getfeatures,filename=None):\n",
+    "        #counts of feature/category combinatios\n",
+    "        self.fc={}\n",
+    "        #counts of documents in each category\n",
+    "        self.cc={}\n",
+    "        self.getfeatures = getfeatures\n",
+    "    \n",
+    "    # Increase the count of a feature/category pair\n",
+    "    def incf(self,f,cat):\n",
+    "        self.fc.setdefault(f,{})\n",
+    "        self.fc[f].setdefault(cat,0)\n",
+    "        self.fc[f][cat]+=1\n",
+    "        \n",
+    "    # Increase the count of a category\n",
+    "    def incc(self,cat):\n",
+    "        self.cc.setdefault(cat,0)\n",
+    "        self.cc[cat]+=1\n",
+    "    \n",
+    "    # The number of times a feature has appeared in category\n",
+    "    def fcount(self,f,cat):\n",
+    "        if f in self.f and cat in self.cat:\n",
+    "            return float(self.fc[f][cat])\n",
+    "        return 0.0\n",
+    "    \n",
+    "    # The number of items in a category\n",
+    "    def catcount(self,cat):\n",
+    "        if cat in self.cc:\n",
+    "            return float(self.cc[cat])\n",
+    "        return 0\n",
+    "    \n",
+    "    # The total number of items\n",
+    "    def totalcount(self):\n",
+    "        return sum(self.cc.values())\n",
+    "    \n",
+    "    # The list of all categories\n",
+    "    def categories(self):\n",
+    "        return self.cc.keys()\n",
+    "    \n",
+    "    def train(self,item,cat):\n",
+    "        features = self.getfeatures(item)\n",
+    "        # increment count of every feature in this category\n",
+    "        for f in features:\n",
+    "            self.incf(f,cat)\n",
+    "        \n",
+    "        # increment count of this category\n",
+    "        self.incc(cat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# using getwords as the feature extractor.\n",
+    "c1 = classifier(getwords)"
    ]
   },
   {
