feat: Bayesian classifier added

--- a/words.ipynb
+++ b/words.ipynb
@@ -14,8 +14,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def getwords(doc):\n",
@@ -32,8 +34,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class classifier:\n",
@@ -87,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -95,6 +99,76 @@
    "source": [
     "# using getwords as the feature extractor.\n",
     "c1 = classifier(getwords)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Calculating the probabilities."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Calculating Probabilities\n",
+    "def fprob(self,f,cat):\n",
+    "    if self.catcount(cat) == 0:\n",
+    "        return 0\n",
+    "    # Total number of times product appears in this category\n",
+    "    # divided by total number of items in category\n",
+    "    return self.fcount(f,cat)/self.catcount(cat)\n",
+    "classifier.fprob = fprob\n",
+    "\n",
+    "def weightedprob(self,f,cat,prf,weight=1.0,ap=0.5):\n",
+    "    '''prf is the function to calculate proability\n",
+    "       ap is assumed probability\n",
+    "    '''\n",
+    "    #Calculate current probability\n",
+    "    basicprob = prf(f,cat)\n",
+    "    \n",
+    "    #count the number of times this feature has appeared in all categories\n",
+    "    totals = sum([self.fcount(f,c) for c in self.categories()])\n",
+    "    \n",
+    "    # calculate the weighted average\n",
+    "    bp = ((weight*ap) + (totals*basicprob)) / (weight + totals)\n",
+    "    return bp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Naive Bayes classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# creating a subclass classifier\n",
+    "class naivebayes(classifier):\n",
+    "    def docprob(self,item,cat):\n",
+    "        features = self.getfeatures(item)\n",
+    "        \n",
+    "        # Since each word is assumed independent multiply all probabilities\n",
+    "        p=1\n",
+    "        for f in features: p*=self.weightedprob(f,cat,self.fprob)\n",
+    "        return p\n",
+    "    \n",
+    "    def prob(self,item,cat):\n",
+    "        catprob = self.catcount(cat)/self.totalcount()\n",
+    "        docprob = self.docprob(item,cat)\n",
+    "        return docprob*catprob"
    ]
   },
   {
@@ -109,9 +183,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -123,7 +197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
