feat: Added threshold
Classifying with probability of 1 is highly difficult so we can set
a manual threshold to the calculated probability if we want to avoid
more false +ves then threshold can be set to high for negative classes.

--- a/words.ipynb
+++ b/words.ipynb
@@ -157,6 +157,10 @@
    "source": [
     "# creating a subclass classifier\n",
     "class naivebayes(classifier):\n",
+    "    def __init__(self,getfeatures):\n",
+    "        classifier.__init__(self,getfeatures)\n",
+    "        self.thresholds={}\n",
+    "        \n",
     "    def docprob(self,item,cat):\n",
     "        features = self.getfeatures(item)\n",
     "        \n",
@@ -168,7 +172,30 @@
     "    def prob(self,item,cat):\n",
     "        catprob = self.catcount(cat)/self.totalcount()\n",
     "        docprob = self.docprob(item,cat)\n",
-    "        return docprob*catprob"
+    "        return docprob*catprob\n",
+    "    \n",
+    "    def setthreshold(self,cat,t):\n",
+    "        self.thresholds[cat] = t\n",
+    "    \n",
+    "    def getthreshold(self,cat):\n",
+    "        if cat not in self.thresholds: return 1.0\n",
+    "        return self.thresolds[cat]\n",
+    "    \n",
+    "    def classify(self,item,default=None):\n",
+    "        probs={}\n",
+    "        # Find the category with highest probability\n",
+    "        tmax = 0.0\n",
+    "        for cat in self.categories():\n",
+    "            probs[cat] = self.prob(item,cat)\n",
+    "            if probs[cat] > tmax:\n",
+    "                tmax = probs[cat]\n",
+    "                best = cat\n",
+    "        \n",
+    "        # Make sure the probability exceeds thresold*next best\n",
+    "        for cat in probs:\n",
+    "            if cat == best: continue\n",
+    "            if probs[cat]*self.getthreshold(best)>probs[best]: return default\n",
+    "        return best"
    ]
   },
   {
